--- a/terraform/docker-swarm/ansible/inventory.tmpl
+++ b/terraform/docker-swarm/ansible/inventory.tmpl
@@ -10,8 +10,8 @@ ${dns} ansible_host=${worker-private-ip[index]} # ${worker-private-id[index]}
 
 [managers:vars]
 ansible_user = ${managers_ami_username}
-ansible_ssh_common_args = '-o "ProxyCommand ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i ~/Downloads/infra-dev.pem -W %h:%p ${managers_ami_username}@${bastion_instance_ip}"'
+ansible_ssh_common_args = '-o "ProxyCommand ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i ssh_key_location -W %h:%p ${managers_ami_username}@${bastion_instance_ip}"'
 
 [workers:vars]
 ansible_user = ${workers_ami_username}
-ansible_ssh_common_args = '-o "ProxyCommand ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i ~/Downloads/infra-dev.pem -W %h:%p ${workers_ami_username}@${bastion_instance_ip}"'
+ansible_ssh_common_args = '-o "ProxyCommand ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i ssh_key_location -W %h:%p ${workers_ami_username}@${bastion_instance_ip}"'
